--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ ffmpeg-python
 Flask
 Flask_Cors
 gradio>=3.7.0
-numpy==1.23.5
+numpy
 pyworld
-scipy==1.10.0
+scipy
 SoundFile==0.12.1
 torch
 torchaudio
